--- a/Magazyn 2022/MainWindow.xaml
+++ b/Magazyn 2022/MainWindow.xaml
@@ -7,6 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="108,132,0,0" VerticalAlignment="Top"/>
+        <TextBlock HorizontalAlignment="Left" Height="105" Margin="301,98,0,0" Text="TextBlock" TextWrapping="Wrap" VerticalAlignment="Top" Width="347"/>
 
     </Grid>
 </Window>
