Dodanie funkcji GetAllInfo Dodanie Usera Administracja

--- a/Magazyn 2022/MainWindow.xaml
+++ b/Magazyn 2022/MainWindow.xaml
@@ -8,7 +8,8 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <Button Content="Button" HorizontalAlignment="Left" Margin="108,132,0,0" VerticalAlignment="Top"/>
-        <TextBlock HorizontalAlignment="Left" Height="105" Margin="301,98,0,0" Text="TextBlock" TextWrapping="Wrap" VerticalAlignment="Top" Width="347"/>
+        <TextBlock Name ="Testy" HorizontalAlignment="Left" Height="105" Margin="301,98,0,0"  TextWrapping="Wrap" VerticalAlignment="Top" Width="347"/>
+        <TextBlock x:Name="Testy2" HorizontalAlignment="Left" Margin="197,289,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="90" Width="312"/>
 
     </Grid>
 </Window>
